QR working fixed

--- a/force-app/main/default/lwc/scanQRCode/scanQRCode.html
+++ b/force-app/main/default/lwc/scanQRCode/scanQRCode.html
@@ -9,7 +9,7 @@
         </div>
     </template>
     <iframe
-        src="https://venerable-strudel-b9e4e9.netlify.app/"
+        src="https://stately-griffin-098689.netlify.app"
         allow="camera; microphone;"
         onload={handleLoad}
     ></iframe>
